<?xml version='1.0' encoding='UTF-8'?>
<resources>
    <string name="app_name">Trailblazer Client</string>

    <!-- Add these to your res/values/strings.xml file -->
    <string name="disclaimer_title">Disclaimer</string>
    <string name="disclaimer_text">This app collects and stores your precise location data even when the app is closed or not in use to enable:</string>
    <string name="disclaimer_point1">Real-time tracking of delivery vehicles and sales personnel</string>
    <string name="disclaimer_point2">SOS emergency response functionality</string>
    <string name="disclaimer_point3">Route optimization and performance analysis</string>
    <string name="disclaimer_details">Your location is only tracked when tracking is manually enabled. The tracking status is always clearly visible in the app.\n\nLocation data is securely stored and used solely for business operations purposes. It is never sold to third parties for marketing.\n\nYou can disable tracking at any time through the app.</string>
    <string name="disclaimer_accept">I UNDERSTAND AND CONSENT</string>

    <string name="status_connected">● Connected</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="clock_in">Clock in</string>
    <string name="clock_out">Clock out</string>
    <string name="settings_title">Settings</string>
    <string name="settings_device_identifier">Device Identifier</string>
    <string name="settings_device_identifier_hint">Enter Device Identifier</string>
    <string name="settings_server_url_title">Server URL</string>
    <string name="settings_server_url_value">https://trailblazer.sbmkinetics.co.za/</string>
<!--    <string name="settings_server_url_value_staging">http://192.168.10.133/</string>-->
    <string name="settings_server_url_value_staging">https://pathfinder.sbmkinetics.co.za/</string>
    <string name="settings_location_accuracy">Location Accuracy</string>
    <string name="settings_location_accuracy_value">High</string>
    <string name="settings_cancel_button">Cancel</string>
    <string name="settings_save_button">Save</string>
    <string name="app_logo">Traccar</string>
    <string name="shortcut_start">Start service</string>
    <string name="shortcut_stop">Stop service</string>
    <string name="shortcut_sos">Send SOS</string>
    <string name="channel_default">Primary Channel</string>
    <string name="settings_id_title">Device identifier</string>
    <string name="settings_url_title">Server URL</string>
    <string name="settings_url_summary">Tracking server URL</string>
    <string name="settings_interval_title">Frequency</string>
    <string name="settings_interval_summary">Reporting interval in seconds</string>
    <string name="settings_distance_title">Distance</string>
    <string name="settings_distance_summary">Reporting distance in meters</string>
    <string name="settings_angle_title">Angle</string>
    <string name="settings_angle_summary">Reporting angle in degrees</string>
    <string name="settings_status_title">Service status</string>
    <string name="settings_status_off">Start</string>
    <string name="settings_status_on">Stop</string>
    <string name="settings_status_off_summary">Service stopped</string>
    <string name="settings_status_on_summary">Service running</string>
    <string name="settings_buffer">Offline buffering</string>
    <string name="settings_buffer_off_summary">Buffering off</string>
    <string name="settings_buffer_on_summary">Buffering on</string>
    <string name="settings_wakelock">Wake lock</string>
    <string name="settings_wakelock_off_summary">Wake lock off</string>
    <string name="settings_wakelock_on_summary">Wake lock on</string>
    <string name="settings_accuracy_title">Location accuracy</string>
    <string name="settings_accuracy_summary">Desired location accuracy</string>
    <string name="settings_accuracy_high">High</string>
    <string name="settings_accuracy_medium">Medium</string>
    <string name="settings_accuracy_low">Low</string>
    <string name="settings_foreground_title">Foreground service</string>
    <string name="settings_foreground_summary">Increase service priority</string>
    <string name="menu_status">Status</string>
    <string name="menu_info">Info</string>
    <string name="menu_shortcuts">Add shortcuts</string>
    <string name="menu_clear">Clear</string>
    <string name="status_service_create">Service started</string>
    <string name="status_service_destroy">Service stopped</string>
    <string name="status_send_success">Send successfully</string>
    <string name="status_send_fail">Send failed</string>
    <string name="status_location_update">Location update</string>
    <string name="status_network_online">Network online</string>
    <string name="status_network_offline">Network offline</string>
    <string name="hidden_alert">The app has been hidden. To open it again please dial 8722227 (TRACCAR).</string>
    <string name="error_msg_invalid_url">Please enter a valid http:// or https:// URL</string>
    <string name="request_exception">To continuously collect location data please turn off battery optimization for the app.</string>
    <string name="request_background">To continuously collect location data please enable \"%s\" permission.</string>
    <string name="request_background_option">Allow all the time</string>
    <string name="widget_description">Shows the service status</string>
    <string name="widget_label">Status widget</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_check_credentials">Please check your credentials!</string>
</resources>
