<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/forty_eight_dp"
    android:layout_marginTop="@dimen/forty_eight_dp"
    android:layout_marginLeft="@dimen/twelve_dp"
    android:layout_marginRight="@dimen/twelve_dp"
    tools:context=".trailblazer.ui.Trailblazer">

    <LinearLayout
        android:id="@+id/linContent"
        android:layout_width="403dp"
        android:layout_height="881dp"
        android:orientation="vertical">

        <!-- Connection Status Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/connection_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/status_connected"
                android:gravity="center"
                android:padding="@dimen/eight_dp"
                android:textColor="@color/primary"
                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/sos"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:background="@android:color/transparent"

                android:scaleType="fitCenter"
                android:src="@drawable/sos"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/settings_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:layout_margin="@dimen/eight_dp"
                android:background="@drawable/rounded_button"
                android:onClick="settingsClicked"
                android:padding="12dp"
                android:scaleType="fitCenter"
                android:src="@drawable/settings"
                tools:ignore="ContentDescription,UsingOnClickInXml" />
        </LinearLayout>

        <!-- Logo and Device ID Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/eight_dp">

            <ImageView
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:background="@drawable/round_outline"
                android:padding="@dimen/eight_dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logo"
                tools:ignore="ContentDescription" />

            <View
                android:layout_width="@dimen/twelve_dp"
                android:layout_height="0dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="112dp"
                android:layout_weight="1"
                android:background="@drawable/round_outline"
                android:padding="@dimen/eight_dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/eight_dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/vehicle"
                        tools:ignore="ContentDescription" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/device_id"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textColor="@color/white"
                        android:textSize="30sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <!-- Spacer Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="546dp"
            android:layout_weight="1">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:ignore="NestedWeights" />

        </LinearLayout>

        <!-- Bottom Controls Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingBottom="24dp">
            <!-- Clock In/Out Section -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/round_outline"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="clockInAndOut"
                tools:ignore="UsingOnClickInXml">

                <ImageView
                    android:id="@+id/clock_in_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/clock_in"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/clock_in_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/btn_Logs"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/eight_dp"
                android:background="@drawable/round_outline"
                android:onClick="settingsClicked"
                android:padding="@dimen/twelve_dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_thumb"
                android:visibility="gone"
                tools:ignore="ContentDescription,UsingOnClickInXml" />
            <!-- Settings Button -->

            <ImageButton
                android:id="@+id/btn_photo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/eight_dp"
                android:background="@drawable/rounded_button"
                android:padding="@dimen/twelve_dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_photo"
                tools:ignore="ContentDescription,UsingOnClickInXml" />
        </LinearLayout>
    </LinearLayout>

    <!-- Settings CardView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/settings_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/twelve_dp"
        app:cardElevation="@dimen/twelve_dp"
        android:layout_margin="@dimen/twelve_dp"
        android:visibility="gone"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="@dimen/twelve_dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/settings_title"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <!-- Device Identifier Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/settings_device_identifier"/>
                <EditText
                    android:id="@+id/settings_device_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:hint="@string/settings_device_identifier_hint"/>
            </LinearLayout>

            <!-- Server URL Section (Disabled) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/settings_server_url_title"/>
                <EditText
                    android:id="@+id/settings_server_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingBottom="16dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:enabled="false"
                    tools:ignore="TextFields"/>
            </LinearLayout>

            <!-- Location Accuracy Section (Disabled) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/settings_location_accuracy"/>
                <EditText
                    android:id="@+id/settings_location_accuracy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:enabled="false"/>
            </LinearLayout>

            <!-- Cancel and Save Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/settings_cancel"
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:onClick="cancelSettingsClicked"
                    android:text="@string/settings_cancel_button"
                    android:textColor="@color/black"
                    tools:ignore="UsingOnClickInXml"/>
                <Button
                    android:id="@+id/settings_save"
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:layout_gravity="right"
                    android:background="@drawable/round_outline"
                    android:onClick="saveSettingsClicked"
                    android:text="@string/settings_save_button"
                    android:textColor="@color/white"
                    tools:ignore="UsingOnClickInXml"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
